feat: 커스텀 구분자 기능 구현